[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
authors = [{name = "Yiyu Ni", email = "niyiyu@uw.edu"}]
description = "Pacific Northwest Seismic Data Store Access Tool"
readme = "README.md"
license = {file= "LICENSE"}
name = "pnwstore"
version = "0.2.1"
dependencies = [
    "obspy",
    "pandas",
    "mysql-connector-python",
    "texttable",
    "tqdm",
]
requires-python = ">=3.8"

[project.optional-dependencies]
doc = [
    "jupyter-book<2.0",
]

[tool.setuptools]
packages = ["pnwstore"]
